--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketMatchBlock.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/BracketMatchBlock.fxml
@@ -8,7 +8,7 @@
 
 <HBox layoutX="10.0" layoutY="10.0" prefHeight="37.0" prefWidth="209.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.BracketMatchBlockController">
     <children>
-        <VBox prefHeight="50.0" prefWidth="189.0" style="-fx-background-color: grey;">
+        <VBox prefHeight="61.0" prefWidth="115.0" style="-fx-background-color: grey;">
             <children>
                 <Label fx:id="Team1">
                     <font>
@@ -28,22 +28,22 @@
                 </Label>
             </children>
         </VBox>
-        <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="50.0" prefWidth="36.0" style="-fx-background-color: grey;">
+        <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="61.0" prefWidth="96.0" style="-fx-background-color: grey;">
             <children>
-                <Label fx:id="PointsTeam1" alignment="CENTER" text="-">
+                <Label fx:id="PointsTeam1" alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="94.0" text="-" textAlignment="JUSTIFY">
                     <font>
                         <Font size="18.0" />
                     </font>
                     <VBox.margin>
-                        <Insets left="5.0" top="3.0" />
+                        <Insets left="5.0" right="5.0" top="3.0" />
                     </VBox.margin>
                 </Label>
-                <Label fx:id="PointsTeam2" alignment="CENTER" text="-">
+                <Label fx:id="PointsTeam2" alignment="CENTER_RIGHT" prefHeight="27.0" prefWidth="98.0" text="-" textAlignment="JUSTIFY">
                     <font>
                         <Font size="18.0" />
                     </font>
                     <VBox.margin>
-                        <Insets left="5.0" top="3.0" />
+                        <Insets left="5.0" right="5.0" top="3.0" />
                     </VBox.margin>
                 </Label>
             </children>
