--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/CreateATournament.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/CreateATournament.fxml
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style=" -fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.CreateATournamentController">
+<AnchorPane fx:id="anchorPane" maxHeight="810.0" maxWidth="1440.0" minHeight="540.0" minWidth="960.0" prefHeight="540.0" prefWidth="960.0" style=" -fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.ntnu.idatt1002.k1g01.controller.CreateATournamentController">
     <children>
         <BorderPane prefHeight="540.0" prefWidth="960.0" stylesheets="@style.css">
             <top>
@@ -39,7 +27,7 @@
                         <Pane prefHeight="62.0" prefWidth="277.0" />
                         <BorderPane prefHeight="200.0" prefWidth="200.0">
                            <center>
-                              <Label prefHeight="33.0" prefWidth="143.0" text="Create A Tournament" BorderPane.alignment="CENTER" />
+                              <Label prefHeight="33.0" prefWidth="143.0" text="Create Tournament" BorderPane.alignment="CENTER" />
                            </center>
                         </BorderPane>
                      </children>
@@ -84,7 +72,7 @@
                               <Label fx:id="tournamentErrorOutput" layoutX="-22.0" layoutY="161.0" prefHeight="80.0" prefWidth="270.0" styleClass="errorFeedback" wrapText="true" />
                               <Label fx:id="tournamentWarningOutput" alignment="BOTTOM_LEFT" layoutX="-22.0" layoutY="81.0" prefHeight="80.0" prefWidth="270.0" styleClass="warningFeedback" wrapText="true" />
                            </children></Pane>
-                        <Button mnemonicParsing="false" onAction="#createTournament" prefHeight="60.0" prefWidth="221.0" text="Create A Tournament">
+                        <Button mnemonicParsing="false" onAction="#createTournament" prefHeight="60.0" prefWidth="221.0" text="Create Tournament">
                            <effect>
                               <InnerShadow />
                            </effect></Button>
