--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/CreateATournament.fxml
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/CreateATournament.fxml
@@ -16,19 +16,24 @@
                   <Pane prefHeight="26.0" prefWidth="960.0" />
                   <HBox prefHeight="78.0" prefWidth="960.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#displayPopUpMenu" prefHeight="58.0" prefWidth="88.0" style="-fx-background-color: lightgray; -fx-border-color: lightgray;">
-                           <graphic>
-                              <ImageView fitHeight="50.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@icons/menu.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic></Button>
-                        <Pane prefHeight="62.0" prefWidth="277.0" />
-                        <BorderPane prefHeight="200.0" prefWidth="200.0">
+                        <BorderPane prefHeight="65.0" prefWidth="963.0">
                            <center>
-                              <Label prefHeight="33.0" prefWidth="143.0" text="Create Tournament" BorderPane.alignment="CENTER" />
+                              <Label alignment="CENTER" prefHeight="34.0" prefWidth="437.0" text="Create Tournament" BorderPane.alignment="CENTER" />
                            </center>
+                           <left>
+                              <Button mnemonicParsing="false" onAction="#displayPopUpMenu" prefHeight="58.0" prefWidth="88.0" style="-fx-background-color: lightgray; -fx-border-color: lightgray;" BorderPane.alignment="CENTER">
+                                 <graphic>
+                                    <ImageView fitHeight="50.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@icons/menu.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                           </left>
+                           <right>
+                              <Pane prefHeight="58.0" prefWidth="88.0" BorderPane.alignment="CENTER" />
+                           </right>
                         </BorderPane>
                      </children>
                   </HBox>
@@ -36,48 +41,96 @@
                 </VBox>
             </top>
          <center>
-            <HBox prefHeight="415.0" prefWidth="960.0" BorderPane.alignment="CENTER">
+            <HBox alignment="TOP_CENTER" prefHeight="415.0" prefWidth="960.0" BorderPane.alignment="CENTER">
                <children>
-                  <Pane prefHeight="445.0" prefWidth="46.0" />
                   <VBox prefHeight="437.0" prefWidth="250.0">
                      <children>
-                        <Pane prefHeight="38.0" prefWidth="202.0" />
-                        <Label text="Tournament Name" />
-                        <TextField fx:id="tournamentNameInputField" />
-                        <Pane layoutX="10.0" layoutY="10.0" prefHeight="22.0" prefWidth="202.0" />
-                        <Label layoutX="10.0" layoutY="48.0" text="Tournament Type" />
-                        <ChoiceBox fx:id="tournamentTypeInput" onAction="#tournamentTypeInputEvent" prefWidth="150.0" />
-                        <Pane layoutX="10.0" layoutY="92.0" prefHeight="22.0" prefWidth="202.0" />
-                        <Label layoutX="10.0" layoutY="114.0" text="Teams Per Group" />
-                        <ChoiceBox fx:id="teamsPerGroupInput" disable="true" prefHeight="31.0" prefWidth="95.0" />
-                        <Pane layoutX="10.0" layoutY="157.0" prefHeight="22.0" prefWidth="202.0" />
-                        <Label layoutX="10.0" layoutY="180.0" prefHeight="25.0" prefWidth="266.0" text="Teams Advancing From Each Group" />
-                        <ChoiceBox fx:id="teamsAdvancingFromGroupInput" disable="true" prefHeight="31.0" prefWidth="93.0" />
-                        <Pane layoutX="10.0" layoutY="224.0" prefHeight="30.0" prefWidth="250.0" />
-                        <Button mnemonicParsing="false" onAction="#cancelBackToHomePage" prefHeight="60.0" prefWidth="219.0" text="Cancel">
-                           <effect>
-                              <InnerShadow />
-                           </effect></Button>
-                     </children></VBox>
-                  <Pane prefHeight="445.0" prefWidth="47.0" />
-                  <VBox prefHeight="445.0" prefWidth="226.0">
-                     <children>
-                        <Pane prefHeight="38.0" prefWidth="202.0" />
-                        <Label prefHeight="22.0" prefWidth="155.0" text="Match Winner By" />
-                        <RadioButton fx:id="pointMatchButton" mnemonicParsing="false" text="Point Match" />
-                        <Pane layoutX="10.0" layoutY="106.0" prefHeight="11.0" prefWidth="226.0" />
-                        <RadioButton fx:id="timeMatchButton" layoutX="10.0" layoutY="71.0" mnemonicParsing="false" text="Time Match" />
-                        <Pane layoutX="10.0" layoutY="10.0" prefHeight="242.0" prefWidth="226.0">
+                        <Label text="Tournament Name">
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin></Label>
+                        <TextField fx:id="tournamentNameInputField" prefHeight="45.0" prefWidth="250.0" />
+                        <Label prefHeight="22.0" prefWidth="155.0" text="Match Winner By">
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin></Label>
+                        <RadioButton fx:id="pointMatchButton" mnemonicParsing="false" text="Point Match">
+                           <VBox.margin>
+                              <Insets top="3.0" />
+                           </VBox.margin></RadioButton>
+                        <RadioButton fx:id="timeMatchButton" mnemonicParsing="false" text="Time Match">
+                           <VBox.margin>
+                              <Insets top="3.0" />
+                           </VBox.margin></RadioButton>
+                        <Label layoutX="10.0" layoutY="48.0" text="Tournament Type">
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin></Label>
+                        <RadioButton fx:id="knockoutStageButton" layoutX="10.0" layoutY="160.0" mnemonicParsing="false" text="Knockout Stage">
+                           <VBox.margin>
+                              <Insets top="3.0" />
+                           </VBox.margin>
+                        </RadioButton>
+                        <RadioButton fx:id="groupStageButton" layoutX="10.0" layoutY="222.0" mnemonicParsing="false" text="Group Stage + Knockout stage">
+                           <VBox.margin>
+                              <Insets top="3.0" />
+                           </VBox.margin>
+                        </RadioButton>
+                        <HBox alignment="BOTTOM_CENTER" prefHeight="196.0" prefWidth="250.0">
                            <children>
-                              <Label fx:id="tournamentErrorOutput" layoutX="-22.0" layoutY="161.0" prefHeight="80.0" prefWidth="270.0" styleClass="errorFeedback" wrapText="true" />
-                              <Label fx:id="tournamentWarningOutput" alignment="BOTTOM_LEFT" layoutX="-22.0" layoutY="81.0" prefHeight="80.0" prefWidth="270.0" styleClass="warningFeedback" wrapText="true" />
-                           </children></Pane>
-                        <Button mnemonicParsing="false" onAction="#createTournament" prefHeight="60.0" prefWidth="221.0" text="Create Tournament">
-                           <effect>
-                              <InnerShadow />
-                           </effect></Button>
-                     </children></VBox>
-                  <Pane prefHeight="434.0" prefWidth="77.0" />
+                              <Button mnemonicParsing="false" onAction="#cancelBackToHomePage" prefHeight="60.0" prefWidth="219.0" text="Cancel">
+                                 <effect>
+                                    <InnerShadow />
+                                 </effect>
+                                 <HBox.margin>
+                                    <Insets bottom="30.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </children>
+                     <HBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </HBox.margin></VBox>
+                  <VBox prefHeight="434.0" prefWidth="259.0">
+                     <children>
+                        <Label fx:id="teamsPerMatchLabel" prefHeight="22.0" prefWidth="139.0" text="Teams Per Match">
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin>
+                        </Label>
+                        <ChoiceBox fx:id="teamsPerMatchInput" prefHeight="45.0" prefWidth="95.0" />
+                        <Label fx:id="teamsPerGroupLabel" text="Teams Per Group">
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin></Label>
+                        <ChoiceBox fx:id="teamsPerGroupInput" disable="true" prefHeight="45.0" prefWidth="95.0" />
+                        <Label fx:id="teamsAdvancingFromGroupLabel" prefHeight="25.0" prefWidth="266.0" text="Teams Advancing From Each Group">
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin></Label>
+                        <ChoiceBox fx:id="teamsAdvancingFromGroupInput" disable="true" prefHeight="45.0" prefWidth="93.0" />
+                        <VBox alignment="BOTTOM_CENTER" prefHeight="270.0" prefWidth="226.0">
+                           <children>
+                              <Label fx:id="tournamentWarningOutput" alignment="BOTTOM_LEFT" layoutX="28.0" layoutY="94.0" prefHeight="42.0" prefWidth="224.0" style="-fx-text-fill: orange;" wrapText="true" />
+                              <Label fx:id="tournamentErrorOutput" alignment="BOTTOM_LEFT" prefHeight="42.0" prefWidth="224.0" style="-fx-text-fill: red;" wrapText="true" />
+                              <Button mnemonicParsing="false" onAction="#createTournament" prefHeight="60.0" prefWidth="221.0" text="Create Tournament">
+                                 <effect>
+                                    <InnerShadow />
+                                 </effect>
+                                 <VBox.margin>
+                                    <Insets bottom="30.0" />
+                                 </VBox.margin>
+                              </Button>
+                           </children>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </VBox>
+                     </children>
+                     <HBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </HBox.margin></VBox>
                   <VBox prefHeight="428.0" prefWidth="266.0">
                      <children>
                         <Label alignment="CENTER" prefHeight="38.0" prefWidth="287.0" text="Team List" />
@@ -96,16 +149,24 @@
                            </children>
                         </HBox>
                         <Label fx:id="addTeamErrorOutput" prefHeight="22.0" prefWidth="251.0" styleClass="errorFeedback" />
-                        <Pane prefHeight="8.0" prefWidth="266.0" />
-                        <TableView fx:id="teamTableOutput" prefHeight="283.0" prefWidth="234.0">
-                          <columns>
-                            <TableColumn fx:id="teamNameColumn" onEditCommit="#changeTeamNameCellEvent" prefWidth="265.59997560977934" text="Team Name" />
-                          </columns>
-                        </TableView>
-                     </children></VBox>
-                  <VBox prefHeight="434.0" prefWidth="16.0">
+                        <HBox prefHeight="312.0" prefWidth="266.0">
+                           <children>
+                              <TableView fx:id="teamTableOutput" prefHeight="311.0" prefWidth="277.0">
+                                <columns>
+                                  <TableColumn fx:id="teamNameColumn" onEditCommit="#changeTeamNameCellEvent" prefWidth="265.59997560977934" text="Team Name" />
+                                </columns>
+                                 <HBox.margin>
+                                    <Insets bottom="30.0" />
+                                 </HBox.margin>
+                              </TableView>
+                           </children>
+                        </HBox>
+                     </children>
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin></VBox>
+                  <VBox alignment="BOTTOM_CENTER" prefHeight="434.0" prefWidth="16.0">
                      <children>
-                        <Pane prefHeight="371.0" prefWidth="54.0" />
                         <Button mnemonicParsing="false" onAction="#deleteSelectedTeam" prefHeight="42.0" prefWidth="12.0" style="-fx-background-color: lightgray; -fx-border-color: lightgray;">
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
@@ -114,8 +175,14 @@
                                  </image>
                               </ImageView>
                            </graphic>
+                           <VBox.margin>
+                              <Insets bottom="30.0" />
+                           </VBox.margin>
                         </Button>
                      </children>
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin>
                   </VBox>
                </children>
             </HBox>
