--- a/src/main/resources/edu/ntnu/idatt1002/k1g01/view/style.css
+++ b/src/main/resources/edu/ntnu/idatt1002/k1g01/view/style.css
@@ -58,6 +58,9 @@
 .button:hover{
     -fx-cursor: hand;
 }
+.button:focused{
+    -fx-border-color:#019A06 ;
+}
 
 .custom-button{
     -fx-padding: 8 15 15 15;
@@ -74,6 +77,9 @@
 .custom-button:hover{
     -fx-cursor: hand;
     -fx-text-fill: #2D2D2D;
+}
+.custom-button:focused{
+    -fx-border-color:#019A06 ;
 }
 .custom-button:pressed{
     -fx-background-color:#EEEFE6;
